[gd_scene load_steps=26 format=3 uid="uid://f83gyeew2g0u"]

[ext_resource type="Script" path="res://Skill.gd" id="1_5bu0k"]
[ext_resource type="Texture2D" uid="uid://wv2vfdavinws" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval1.png" id="2_jessp"]
[ext_resource type="Texture2D" uid="uid://dsmka3b5oqima" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval2.png" id="3_kwvm2"]
[ext_resource type="Texture2D" uid="uid://dtpq66447162y" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval3.png" id="4_64357"]
[ext_resource type="Texture2D" uid="uid://cstbokrl2sd63" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval4.png" id="5_daqa0"]
[ext_resource type="Texture2D" uid="uid://ciw5u4wdjrx16" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval5.png" id="6_mxnq3"]
[ext_resource type="Texture2D" uid="uid://bc3uq2auip2he" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval6.png" id="7_oyyc2"]
[ext_resource type="Texture2D" uid="uid://dgwutx1ey18ip" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval7.png" id="8_hm26v"]
[ext_resource type="Texture2D" uid="uid://2kjkm4ptt4rv" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval8.png" id="9_msaxx"]
[ext_resource type="Texture2D" uid="uid://dulgs6dbw2bni" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval9.png" id="10_qr378"]
[ext_resource type="Texture2D" uid="uid://cftqolu0rwetv" path="res://assets/effect/Explosion_blue_oval/Explosion_blue_oval10.png" id="11_xxp0m"]
[ext_resource type="Texture2D" uid="uid://bj60v6f3w0hxj" path="res://assets/effect/Retro Impact Effect Pack 5 A.png" id="12_impg0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7jvak"]
atlas = ExtResource("12_impg0")
region = Rect2(0, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7nv0"]
atlas = ExtResource("12_impg0")
region = Rect2(66, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_m17hu"]
atlas = ExtResource("12_impg0")
region = Rect2(132, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1mok"]
atlas = ExtResource("12_impg0")
region = Rect2(198, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_o43x6"]
atlas = ExtResource("12_impg0")
region = Rect2(264, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_p16lj"]
atlas = ExtResource("12_impg0")
region = Rect2(330, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3vb1"]
atlas = ExtResource("12_impg0")
region = Rect2(396, 1140, 66, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_k54hp"]
atlas = ExtResource("12_impg0")
region = Rect2(462, 1140, 66, 76)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6ler"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jessp")
}, {
"duration": 1.0,
"texture": ExtResource("3_kwvm2")
}, {
"duration": 1.0,
"texture": ExtResource("4_64357")
}, {
"duration": 1.0,
"texture": ExtResource("5_daqa0")
}, {
"duration": 1.0,
"texture": ExtResource("6_mxnq3")
}, {
"duration": 1.0,
"texture": ExtResource("7_oyyc2")
}, {
"duration": 1.0,
"texture": ExtResource("8_hm26v")
}, {
"duration": 1.0,
"texture": ExtResource("9_msaxx")
}, {
"duration": 1.0,
"texture": ExtResource("10_qr378")
}, {
"duration": 1.0,
"texture": ExtResource("11_xxp0m")
}],
"loop": true,
"name": &"ExplosionBlueOval",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jvak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7nv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m17hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1mok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o43x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p16lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3vb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k54hp")
}],
"loop": true,
"name": &"WallFire",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_w2krf"]
resource_name = "ExplosionBlueOval"
length = 0.714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["ExplosionBlueOval"]
}

[sub_resource type="Animation" id="Animation_7up0m"]
resource_name = "WallFire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["WallFire"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26tps"]
_data = {
"ExplosionBlueOval": SubResource("Animation_w2krf"),
"WallFire": SubResource("Animation_7up0m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xihc5"]
size = Vector2(33, 68)

[node name="Skill" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_5bu0k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h6ler")
animation = &"WallFire"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_26tps")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
visibility_layer = 0
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_xihc5")
debug_color = Color(0, 0.32549, 0.384314, 0.419608)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
